--- a/LiveDex/PokemonPage.xaml
+++ b/LiveDex/PokemonPage.xaml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage
-	xmlns  = "http://xamarin.com/schemas/2014/forms"
-	xmlns:x = "http://schemas.microsoft.com/winfx/2009/xaml"
-	x:Class = "LiveDex.PokemonPage">
-	<ContentPage.Content>
+    xmlns  = "http://xamarin.com/schemas/2014/forms"
+    xmlns:x = "http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Class = "LiveDex.PokemonPage">
+    <ContentPage.Content>
         <StackLayout>
-            <ActivityIndicator x:Name="loadingIcon"/>
-            <Image x:Name="pkmSprite"/>
+            <ActivityIndicator
+                x:Name = "loadingIcon" />
+            <Image
+                x:Name = "pkmSprite" />
+            <Switch
+                x:Name          = "pkmCaught"/>
         </StackLayout>
-	</ContentPage.Content>
+    </ContentPage.Content>
 </ContentPage>
