--- a/LiveDex/PokemonPage.xaml
+++ b/LiveDex/PokemonPage.xaml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage
-    xmlns  = "http://xamarin.com/schemas/2014/forms"
-    xmlns:x = "http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class = "LiveDex.PokemonPage">
+    xmlns    = "http://xamarin.com/schemas/2014/forms"
+    xmlns:x   = "http://schemas.microsoft.com/winfx/2009/xaml"
+    Appearing = "Handle_Appearing"
+    x:Class   = "LiveDex.PokemonPage">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout
+            VerticalOptions   = "CenterAndExpand"
+            HorizontalOptions = "CenterAndExpand">
             <ActivityIndicator
                 x:Name = "loadingIcon" />
             <Image
                 x:Name = "pkmSprite" />
             <Switch
                 x:Name  = "pkmCaught"
+                OnColor = "Red"
                 Toggled = "Handle_Toggled" />
         </StackLayout>
     </ContentPage.Content>
