--- a/LiveDex/PokedexPage.xaml
+++ b/LiveDex/PokedexPage.xaml
@@ -6,6 +6,7 @@
     xmlns:ios            = "clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
     ios:Page.UseSafeArea = "true"
     x:Class              = "LiveDex.PokedexPage"
+    Appearing="Handle_Appearing"
     Title                = "Pokedex">
     <StackLayout>
         <Label
@@ -59,13 +60,13 @@
                                         Text           = "{Binding Name}" />
                                 </StackLayout>
                                 <StackLayout
-                                    Grid.Column = "1"
+                                    Grid.Column = "2"
                                     Grid.Row    = "1"
                                     Orientation = "Horizontal">
                                     <Label
                                         TextColor      = "White"
                                         FontAttributes = "Bold"
-                                        Text           = "{Binding Obtained}" />
+                                        Text           = "{Binding Obtained, StringFormat='Caught: {0}'}" />
                                 </StackLayout>
                             </Grid>
                         </ViewCell.View>
