--- a/LiveDex/MainPage.xaml
+++ b/LiveDex/MainPage.xaml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ContentPage
-    xmlns      = "http://xamarin.com/schemas/2014/forms"
-    xmlns:x     = "http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local = "clr-namespace:LiveDex"
-    xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
-ios:Page.UseSafeArea="true"
-    x:Class     = "LiveDex.MainPage">
+    xmlns               = "http://xamarin.com/schemas/2014/forms"
+    xmlns:x              = "http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local          = "clr-namespace:LiveDex"
+    xmlns:ios            = "clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
+    ios:Page.UseSafeArea = "true"
+    x:Class              = "LiveDex.MainPage">
     <StackLayout>
         <!-- Place new controls here -->
         <Label
             Text              = "Welcome to the ultimate pokedex"
             HorizontalOptions = "Center" />
         <Button
-            Text    = "Pokedex"
-            Clicked = "LoadPokedex" />
+            Text = "Pokedex"
+            Clicked  = "LoadPokedexPage" />
         <Button
             Text    = "Caught Pokemon"
-        Clicked="LoadCaughtPage"/>
+            Clicked = "LoadCaughtPage" />
+        <Button
+            Text    = "Missing Pokemon"
+            Clicked = "LoadMissingPage" />
     </StackLayout>
 </ContentPage>
