--- a/LiveDex/CaughtPage.xaml
+++ b/LiveDex/CaughtPage.xaml
@@ -13,6 +13,7 @@
             x:Name                  = "CaughtCount"
             HorizontalTextAlignment = "Center"
             TextColor               = "White"
+            Text                    = "Loading..."
             FontAttributes          = "Bold" />
         <ListView
             x:Name          = "PokedexList"
