--- a/LiveDex/MainPage.xaml
+++ b/LiveDex/MainPage.xaml
@@ -4,6 +4,7 @@
     xmlns:x              = "http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local          = "clr-namespace:LiveDex"
     xmlns:ios            = "clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
+    Appearing="Handle_Appearing"
     ios:Page.UseSafeArea = "true"
     x:Class              = "LiveDex.MainPage">
     <StackLayout>
