--- a/LiveDex/CaughtPage.xaml
+++ b/LiveDex/CaughtPage.xaml
@@ -25,8 +25,7 @@
                 <DataTemplate>
                     <ViewCell>
                         <ViewCell.View>
-                            <Grid
-                                BackgroundColor = "{Binding Type}">
+                            <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition
                                         Width = "Auto" />
