--- a/LiveDex/PokemonPage.xaml
+++ b/LiveDex/PokemonPage.xaml
@@ -48,7 +48,7 @@
                                         Grid.Column    = "0"
                                         TextColor      = "White"
                                         FontAttributes = "Bold"
-                                        Text           = "{Binding Game,StringFormat='Game: {0}'}" />
+                                        Text           = "{Binding Details.Version.FormattedName,StringFormat='Game: {0}'}" />
                                     <Label
                                         Grid.Row       = "0"
                                         Grid.Column    = "0"
