--- a/LiveDex/PokemonPage.xaml
+++ b/LiveDex/PokemonPage.xaml
@@ -15,24 +15,26 @@
                 Color  = "Red" />
             <Image
                 x:Name          = "pkmSprite"
-                BackgroundColor="White"
+                BackgroundColor = "White"
                 HeightRequest   = "250"
                 WidthRequest    = "250" />
             <Switch
-                x:Name  = "pkmCaught"
-                HorizontalOptions="CenterAndExpand"
-                OnColor = "Red"
-                Toggled = "Handle_Toggled" />
+                x:Name            = "pkmCaught"
+                HorizontalOptions = "CenterAndExpand"
+                OnColor           = "Red"
+                Toggled           = "Handle_Toggled" />
             <ListView
                 x:Name          = "LocationList"
                 BackgroundColor = "#34393D"
                 SelectionMode   = "None"
+                ItemTapped      = "RouteTapped"
                 SeparatorColor  = "White">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
                             <ViewCell.View>
-                                <Grid Padding="5">
+                                <Grid
+                                    Padding = "5">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition
                                             Width = "Auto" />
@@ -48,13 +50,13 @@
                                         Grid.Column    = "0"
                                         TextColor      = "White"
                                         FontAttributes = "Bold"
-                                        Text           = "{Binding Details.Version.FormattedName,StringFormat='Game: {0}'}" />
+                                        Text           = "{Binding Name}" />
                                     <Label
                                         Grid.Row       = "0"
                                         Grid.Column    = "0"
                                         TextColor      = "White"
                                         FontAttributes = "Bold"
-                                        Text           = "{Binding Name}" />
+                                        Text           = "{Binding Details.Version.FormattedName,StringFormat='Game: {0}'}" />
                                 </Grid>
                             </ViewCell.View>
                         </ViewCell>
