--- a/LiveDex/RoutePage.xaml
+++ b/LiveDex/RoutePage.xaml
@@ -16,7 +16,8 @@
                     <DataTemplate>
                         <ViewCell>
                             <ViewCell.View>
-                                <Grid Padding="5">
+                                <Grid
+                                    Padding = "5">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition
                                             Width = "*" />
@@ -37,6 +38,12 @@
                                         TextColor      = "White"
                                         FontAttributes = "Bold"
                                         Text           = "{Binding Method.FormattedName, StringFormat='Method: {0}'}" />
+                                    <Label
+                                        Grid.Row       = "0"
+                                        Grid.Column    = "1"
+                                        TextColor      = "White"
+                                        FontAttributes = "Bold"
+                                        Text           = "{Binding Chance, StringFormat='Route Rarity: {0}%'}" />
                                     <Label
                                         Grid.Row        = "2"
                                         Grid.ColumnSpan = "2"
