--- a/LiveDex/PokemonPage.xaml
+++ b/LiveDex/PokemonPage.xaml
@@ -31,6 +31,7 @@
                 x:Name          = "LocationList"
                 BackgroundColor = "#34393D"
                 SelectionMode   = "None"
+                HasUnevenRows   = "true"
                 ItemTapped      = "RouteTapped"
                 SeparatorColor  = "White">
                 <ListView.ItemTemplate>
