--- a/LiveDex/PokedexPage.xaml
+++ b/LiveDex/PokedexPage.xaml
@@ -17,6 +17,7 @@
             FontAttributes          = "Bold" />
         <Picker
             x:Name = "GenFilter"
+            ItemDisplayBinding="{Binding ExtendedName}"
             Title  = "Filter by Generation"
             SelectedIndexChanged="FilterChanged"
         />
