--- a/LiveDex/CaughtPage.xaml
+++ b/LiveDex/CaughtPage.xaml
@@ -15,6 +15,11 @@
             TextColor               = "White"
             Text                    = "Loading..."
             FontAttributes          = "Bold" />
+        <Picker
+            x:Name               = "GenFilter"
+            ItemDisplayBinding   = "{Binding ExtendedName}"
+            Title                = "Filter by Generation"
+            SelectedIndexChanged = "UpdateListView" />
         <ListView
             x:Name          = "PokedexList"
             BackgroundColor = "#34393D"
