--- a/LiveDex/PokedexPage.xaml
+++ b/LiveDex/PokedexPage.xaml
@@ -18,9 +18,9 @@
         <SearchBar
             x:Name            = "searchPokemon"
             Placeholder       = "Search for Pokemon by ID or Name"
-            TextChanged       = "Handle_TextChanged"
+            TextChanged       = "FilterBySearch"
             BackgroundColor   = "#990D11"
-            CancelButtonColor = "Red" />
+            CancelButtonColor = "White" />
         <Picker
             x:Name               = "GenFilter"
             ItemDisplayBinding   = "{Binding ExtendedName}"
