--- a/LiveDex/PokedexPage.xaml
+++ b/LiveDex/PokedexPage.xaml
@@ -66,7 +66,7 @@
                                     <Label
                                         TextColor      = "White"
                                         FontAttributes = "Bold"
-                                        Text           = "{Binding FormattedDexNum, StringFormat=' {0}'}" />
+                                        Text           = "{Binding DexNum, StringFormat=' {0:000}'}" />
                                     <Label
                                         TextColor      = "White"
                                         FontAttributes = "Bold"
