--- a/LiveDex/SettingsPage.xaml
+++ b/LiveDex/SettingsPage.xaml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage
-    xmlns  = "http://xamarin.com/schemas/2014/forms"
-    xmlns:x = "http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class = "LiveDex.SettingsPage">
+    xmlns      = "http://xamarin.com/schemas/2014/forms"
+    xmlns:x     = "http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local = "clr-namespace:LiveDex.Models"
+    x:Class     = "LiveDex.SettingsPage">
     <ContentPage.Content>
         <StackLayout
             HorizontalOptions = "CenterAndExpand">
@@ -10,10 +11,24 @@
                 x:Name = "loading" />
             <Button
                 Text    = "Release 'em All"
-                Clicked = "SetAllPokemonMissing" />
+                Clicked = "SetAllPokemonMissing">
+                <Button.Triggers>
+                    <EventTrigger
+                        Event = "Clicked">
+                        <local:ReleaseAllTrigger />
+                    </EventTrigger>
+                </Button.Triggers>
+            </Button>
             <Button
                 Text    = "Catch 'em All"
-                Clicked = "SetAllPokemonCaught" />
+                Clicked = "SetAllPokemonCaught">
+                <Button.Triggers>
+                    <EventTrigger
+                        Event = "Clicked">
+                        <local:PokedexBehavior />
+                    </EventTrigger>
+                </Button.Triggers>
+            </Button>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
